added a function to check for status

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <html>
 <body>
-    asdasdsadsd
+<p id='puzzleText'></p>
+<p id='guessesLeft'></p>
     <script src='hangman.js'></script>
+    <script src='app.js'></script>
 </body>
 </html>
