--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <body>
 <p id='puzzleText'></p>
 <p id='guessesLeft'></p>
+    <input type='checkbox'>
     <script src='requests.js'></script>
     <script src='hangman.js'></script>
     <script src='app.js'></script>
